[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sesgx-cli"
version = "0.0.1"
requires-python = ">= 3.9"
description = "CLI to perform experiments with the SeSG framework."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["cli", "sesg"]

[tool.ruff]
extend-select = [
    # isort
    "I001",
    "C",
]
unfixable = ["F841"]
exclude = [".venv", "~/.pyenv/"]
ignore-init-module-imports = true
fix = true
