[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sesgx-cli"
version = "0.0.1"
requires-python = ">= 3.9"
description = "CLI to perform experiments with the SeSG framework."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["cli", "sesg"]
dependencies = [
    "typer==0.9.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.28",
    "sesgx@https://github.com/sesgx/sesgx/archive/main.zip",
]

[project.optional-dependencies]
bert-word-enrichment = [
    "torch==2.2.1",
    "transformers==4.38.2",
    "rapidfuzz==3.6.1",
    "nltk==3.8.1",
]
lda-topic-extraction = ["scikit-learn==1.4.1.post1"]
bertopic-topic-extraction = ["bertopic==0.16.0", "scikit-learn==1.4.1.post1"]
render-citation-graph = ["graphviz==0.20.1"]
scopus-client = [
    "scopus_client@https://github.com/sesgx/scopus-client/archive/main.zip",
]
fuzzy-bsb = ["fuzzy_bsb@https://github.com/sesgx/fuzzy-bsb/archive/main.zip"]

[tool.ruff]
extend-select = [
    # isort
    "I001",
    "C",
]
unfixable = ["F841"]
exclude = [".venv", "~/.pyenv/"]
ignore-init-module-imports = true
fix = true
