[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sesgx-cli"
version = "0.0.1"
requires-python = ">= 3.9"
description = "CLI to perform experiments with the SeSG framework."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["cli", "sesg"]
dependencies = [
    "typer[all]==0.9.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.28",
    "psycopg==3.1.18",
    "psycopg-binary==3.1.18",
    "psycopg-pool==3.2.1",
    "tomli==2.0.1",
    "tomli_w==1.0.0",
    "dacite==1.8.1",
    "sesgx@https://github.com/sesgx/sesgx/archive/main.zip",
]

[project.scripts]
sesg = "sesgx_cli.cli:app"

[project.optional-dependencies]
bert-word-enrichment = [
    "torch==2.2.1",
    "transformers==4.38.2",
    "rapidfuzz==3.6.1",
    "nltk==3.8.1",
]
llm-word-enrichment = [      
  "langchain==0.1.9",
  "langchain-community==0.0.24",
  "langchain-core==0.1.27",
  "langchain-openai==0.0.8",
  "tenacity==8.2.3"
]
lda-topic-extraction = ["scikit-learn==1.4.1.post1"]
bertopic-topic-extraction = ["bertopic==0.16.0", "scikit-learn==1.4.1.post1"]
render-citation-graph = ["graphviz==0.20.1"]
scopus = [
    "scopus_client@https://github.com/sesgx/scopus-client/archive/main.zip",
    "scikit-learn==1.4.1.post1",
]
fuzzy-bsb = ["fuzzy_bsb@https://github.com/sesgx/fuzzy-bsb/archive/main.zip"]
pdf-to-text = ["pypdf2==3.0.1"]

[tool.ruff]
extend-select = [
    # isort
    "I001",
    "C",
]
unfixable = ["F841"]
exclude = [".venv", "~/.pyenv/"]
ignore-init-module-imports = true
fix = true
